# sparse_risc0

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
contracts/ping/: Cargo.toml
contracts/ping/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
sparse_tree/: Cargo.toml  readme.md
sparse_tree/src/: lib.rs  poseidon.rs  protocol.rs  smt.rs
