[workspace]
resolver = "2"
members = ["host", "methods", "sparse_tree"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 0
lto = true
opt-level = "s"

[workspace.dependencies]
rand = { version = "0.8" }
