[workspace]
resolver = "2"
members = ["host", "methods", "sparse_tree", "contracts/ping", "types", "app"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 0
lto = true
opt-level = "s"

[workspace.dependencies]
rand = { version = "0.8" }
freenet-stdlib = { version = "0.1.13" }
freenet-ping-types = { path = "types", default-features = false }
chrono = { version = "0.4", default-features = false }
sparse_tree = { path = "sparse_tree" }
sha2 = "=0.10.8"
testresult = "0.4"
methods = { path = "./methods" }