[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false, features = [
    "client",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
tracing = "0.1.41"
sparse_tree = { workspace = true }
sha2 = { workspace = true }
# getrandom = { version = "*", default-features = false, features = ["js"] }
# halo2_proofs = { version = "0.3", default-features = false }

[profile.release]
opt-level = "s"
