[package]
name = "sparse_tree"
version = "0.1.0"
authors = ["plein"]
license = "Apache-2.0"
edition = "2021"

keywords = ["merkle-tree", "authenticated"]
publish = true

[features]
notzk = ["dep:rand"]
default = ["notzk"]

[dependencies]
anyhow = "1.0.38"
ark-std = "0.5.0"
digest = "0.10"
heapless = { version = "0.8.0", features = ["serde"] }
ordermap = "0.5.8"
serde = { version = "1.0.124", features = ["derive"] }
rand = { workspace = true, optional = true }
ordered-float = { version = "5.0.0", features = ["serde"] }
sha2 = "=0.10.8"
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false, features = [
    "std",
] }

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }
rand = { workspace = true }
parking_lot = { version = "0.12.1" }
serde_json = { version = "1.0.95" }
