
[package]
name = "freenet-ping-contract"
version = "0.1.11"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
freenet-stdlib = { workspace = true }
freenet-ping-types = { workspace = true }
serde_json = "1"
getrandom = { version = "*", default-features = false }
sparse_tree = { workspace = true }
sha2 = { workspace = true }
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false, features = [
    "client",
] }
methods = { workspace = true }

[build-dependencies]
getrandom = { version = "*", default-features = true }

[features]
default = ["freenet-main-contract", "contract"]
contract = ["freenet-stdlib/contract", "getrandom/js"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
