[package]
name = "sparse_prover"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0.0-rc.1", default-features = false, features = [
    'std',
] }
num-bigint = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
risc0-zkvm-platform = "2.0.3-rc.1"
sparse_tree = { version = "0.1.0", path = "../../sparse_tree", default-features = false }
sha2 = "=0.10.8"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
